# aithershield

./: ARCHITECTURE.md  COMPLETE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  PIPELINE_EVENTS.md  PIPELINE_EVENTS_DELIVERY.md  PIPELINE_EVENTS_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  README_REAL_EVENTS.md  REAL_EVENTS_QUICK_START.md  VERIFY_REAL_EVENTS.md  docker-compose.dev.yml  verify_pipeline_events.sh
scripts/: backend.sh  check.sh  nvidia_setup.sh  ollama_model_download.sh  startup.sh  test_elasticsearch.rs  test_es_store.rs
src/: alerting.rs  ingestion.rs  lib.rs  main.rs  storage.rs
src/storage/: elasticsearch.rs  es_store.rs
