[package]
name = "aithershield"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
regex = "1.10"
wiremock = "0.6"
proptest = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
chroma = { version = "0.13", default-features = false, features = ["rustls"], optional = true }

[features]
default = ["real-chroma"]
mock-chroma = []
real-chroma = ["dep:chroma"]


[[bin]]
name = "aithershield"
path = "src/main.rs"
